k8s/vue-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  labels:
    app: vue-app
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - image: kennethchoe/vue-app
        imagePullPolicy: Always
        name: vue-app
