k8s/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-server
spec:
  ports:
    - protocol: TCP
      port: 1433
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sql-server
subsets:
  - addresses:
      - ip: $DOCKER_HOST_IP_ADDR
    ports:
      - port: 51403
