k8s/vue-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: ClusterIP
  selector:
    app: vue-app
