k8s/vue-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  labels:
    app: vue-app
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - image: kennethchoe/vue-app
        imagePullPolicy: Always
        name: vue-app
---
apiVersion: v1
kind: Service
metadata:
  name: vue-app
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: ClusterIP
  selector:
    app: vue-app
