k8s/web-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: ClusterIP
  selector:
    app: web-api
