k8s/web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
    app: web-api
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
    spec:
      containers:
      - image: kennethchoe/web-api
        imagePullPolicy: Always
        name: web-api
---
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: ClusterIP
  selector:
    app: web-api
