k8s/web-dotvvm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-dotvvm
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: NodePort
  selector:
    app: web-dotvvm
