k8s/web-dotvvm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dotvvm
  labels:
    app: web-dotvvm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: web-dotvvm
  template:
    metadata:
      labels:
        app: web-dotvvm
    spec:
      containers:
      - image: kennethchoe/web-dotvvm
        imagePullPolicy: Always
        name: web-dotvvm
---
apiVersion: v1
kind: Service
metadata:
  name: web-dotvvm
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  type: ClusterIP
  selector:
    app: web-dotvvm
